--- a/ansible/roles/noble/templates/config.toml.j2
+++ b/ansible/roles/noble/templates/config.toml.j2
@@ -19,7 +19,7 @@ version = "0.38.15"
 proxy_app = "tcp://127.0.0.1:26658"
 
 # A custom human readable name for this node
-moniker = "docker-desktop"
+moniker = "{{ noble_moniker }}"
 
 # Database backend: goleveldb | cleveldb | boltdb | rocksdb | badgerdb
 # * goleveldb (github.com/syndtr/goleveldb - most popular implementation)
